[gd_scene load_steps=7 format=3 uid="uid://dgw8qw4qrayjn"]

[ext_resource type="Script" path="res://scenes/asteroid.gd" id="1_uayqt"]
[ext_resource type="FontFile" uid="uid://db8mjsa7ibkcu" path="res://assets/Kenney Mini Square.ttf" id="2_eraux"]
[ext_resource type="PackedScene" uid="uid://bdv2gvk8p531h" path="res://marker.tscn" id="3_2o220"]
[ext_resource type="Texture2D" uid="uid://cyh2pl6lbixgn" path="res://icon.svg" id="4_wh2js"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_qlnsc"]

[sub_resource type="LabelSettings" id="LabelSettings_o426y"]
font = ExtResource("2_eraux")
font_size = 20

[node name="Asteroid" type="RigidBody2D" groups=["asteroids"]]
input_pickable = true
mass = 100.0
physics_material_override = SubResource("PhysicsMaterial_qlnsc")
center_of_mass_mode = 1
linear_damp = 1.0
script = ExtResource("1_uayqt")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.184314, 0.184314, 0.184314, 1)
polygon = PackedVector2Array(5, -11, 18, -6, 17, 9, -6, 17, -17, -3)

[node name="Polygon2D2" type="Polygon2D" parent="."]
visible = false
z_index = -1
color = Color(1, 1, 1, 0.52549)
offset = Vector2(0, 0.06)
polygon = PackedVector2Array(5, -11, 18, -6, 17, 9, -6, 17, -17, -3)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false

[node name="Line2D" type="Line2D" parent="."]
closed = true
width = 1.0

[node name="Marker" parent="." instance=ExtResource("3_2o220")]

[node name="LabelArea" type="Label" parent="."]
unique_name_in_owner = true
z_index = 11
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -47.0
offset_right = 69.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Area"
label_settings = SubResource("LabelSettings_o426y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelMassKG" type="Label" parent="."]
unique_name_in_owner = true
z_index = 11
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = 23.0
offset_right = 71.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Mass"
label_settings = SubResource("LabelSettings_o426y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 1, 1, 1)
z_index = 100
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_wh2js")

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 0, 1, 1)
z_index = 100
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_wh2js")

[node name="Sprite2D3" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 0, 1)
z_index = 100
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_wh2js")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
